--- a/index.htm
+++ b/index.htm
@@ -330,76 +330,62 @@
                         </tbody>
                     </table>
 
-                    <!-- Tabela de Contactos -->
-                    <table class="table table-dark table-bordered table-striped text-center align-middle">
-                        <thead>
-                            <th colspan="5" class="bg-secondary">Escalamento interno</th>
+                    <!-- CONTACTS TABLE -->
+                    <table class="table table-bordered table-striped table-dark text-center align-middle">
+                        <thead class="bg-secondary">
+                            <th colspan="3" scope="col" class="bg-secondary">Escalamento Interno</th>
                         </thead>
                         <tbody>
                             <tr>
-                                <td colspan="5"></td>
+                                <td class="fw-bold">Empresa</td>
+                                <td class="fw-bold">Nome</td>
+                                <td class="fw-bold">Contacto</td>
                             </tr>
                             <tr>
-                                <th>Escalation level</th>
-                                <th>Role</th>
-                                <th>Name</th>
-                                <th>Phone</th>
-                                <th>Email</th>
-                            </tr>
-                            <tr>
-                                <td>Level 1</td>
-                                <td>NOC</td>
-                                <td>Tech on duty</td>
-                                <td>+351 210 801 005</td>
-                                <td>Surveillance@nowo.pt</td>
-                            </tr>
-                            <tr>
-                                <td rowspan="26">Level 2</td>
-                                <td rowspan="7">Zener - sectores</td>
+                                <td rowspan="8" class="fw-bold">Zener</td>
                                 <td>Palmela / Lisboa</td>
-                                <td colspan="2" class="text-warning fw-bold">Provisório Vítor Santos 928098494</td>
+                                <td>Provisório Vítor Santos - 928098494</td>
                             </tr>
                             <tr>
                                 <td>Caldas da Rainha</td>
-                                <td colspan="2">928025416</td>
+                                <td>928025416</td>
                             </tr>
                             <tr>
                                 <td>Algarve</td>
-                                <td colspan="2">928034863</td>
+                                <td>928034863</td>
                             </tr>
                             <tr>
-                                <td>Elvas/Portalegre</td>
-                                <td colspan="2">928034506</td>
+                                <td>Elvas / Portalegre</td>
+                                <td>928034506</td>
                             </tr>
                             <tr>
                                 <td>Évora / Beja</td>
-                                <td colspan="2" class="text-warning fw-bold">Provisório Paulo Matos - 928070260 </td>
+                                <td>Provisório Paulo Matos - 928070260</td>
                             </tr>
                             <tr>
                                 <td>Alcácer / St André</td>
-                                <td colspan="2" class="text-warning fw-bold">Provisório Paulo Matos - 928070260 </td>
-                            </tr>
-
-                            <tr>
-                                <td rowspan="2">SPOC - ZENER</td>
-                                <td>2ª linha (ligar se sectores não atende)</td>
-                                <td colspan="2">Filipe Pinto 928077787</td>
+                                <td>Provisório Paulo Matos - 928070260</td>
                             </tr>
                             <tr>
-                                <td>3ª linha (ligar se 2ª linha não atende)</td>
-                                <td colspan="2">928034894</td>
+                                <td>2ª Linha</td>
+                                <td>Filipe Pinto 928077787</td>
                             </tr>
                             <tr>
-                                <td rowspan="2">SPOC - CME</td>
-                                <td>1ª linha</td>
-                                <td colspan="2">931048171</td>
+                                <td>3ª Linha</td>
+                                <td>928034894</td>
                             </tr>
                             <tr>
-                                <td>2ª linha (ligar se 1ª linha não atende)</td>
-                                <td colspan="2">931048314</td>
+                                <td rowspan="2" class="bg-warning text-dark fw-bold">CME</td>
+                                <td>1ª Linha</td>
+                                <td>Pedro Noverça - 931048171</td>
+                            </tr>
+                            <tr>
+                                <td>2ª Linha</td>
+                                <td>931048314</td>
                             </tr>
                         </tbody>
                     </table>
+                    <!-- END OF CONTACTS TABLE-->
                 </div>
             </div>
         </div>
