--- a/index.htm
+++ b/index.htm
@@ -27,13 +27,13 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 fw-bold">
                     <li class="nav-item">
-                        <a href="#helperNoc" data-bs-toggle="collapse" class="nav-link">HELPER</a>
+                        <a href="#helperNoc" data-bs-toggle="collapse" class="nav-link text-white">HELPER</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#sosTelegram" data-bs-toggle="collapse" class="nav-link">SOS TELEGRAM</a>
+                        <a href="#sosTelegram" data-bs-toggle="collapse" class="nav-link text-white">SOS TELEGRAM</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#contacts" data-bs-toggle="collapse" class="nav-link">CONTACTOS</a>
+                        <a href="#contacts" data-bs-toggle="collapse" class="nav-link text-white">CONTACTOS</a>
                     </li>
                 </ul>
             </div>
@@ -243,7 +243,7 @@
                         <tbody>
                             <tr>
                                 <td class="fw-bold">Empresa</td>
-                                <td class="fw-bold">Nome</td>
+                                <td class="fw-bold">Nome / Zona</td>
                                 <td class="fw-bold">Contacto</td>
                             </tr>
                             <tr>
@@ -290,7 +290,66 @@
                             </tr>
                         </tbody>
                     </table>
-                    <!-- END OF CONTACTS TABLE-->
+                    <!-- end of contacts table -->
+
+                    <!-- FIELD CONTACTS TABLE-->
+                    <div class="table-responsive">
+                        <table class="table table-bordered table-striped table-dark text-center align-middle">
+                            <thead class="bg-secondary">
+                                <th colspan="3" scope="col" class="bg-secondary">FIELD</th>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td class="fw-bold">Nome</td>
+                                    <td class="fw-bold">Zona</td>
+                                    <td class="fw-bold">Telemóvel</td>
+                                </tr>
+
+                                <tr>
+                                    <td>Hélder Rainho</td>
+                                    <td>Caldas da Rainha</td>
+                                    <td>928080204</td>
+                                </tr>
+
+                                <tr>
+                                    <td>Luís Miguel Sousa</td>
+                                    <td>Zona Norte</td>
+                                    <td>932382032</td>
+                                </tr>
+
+                                <tr>
+                                    <td>Rui Fernandes</td>
+                                    <td>Beiras / Viseu / Seia</td>
+                                    <td>936043044</td>
+                                </tr>
+
+                                <tr>
+                                    <td>João Paulo Silva</td>
+                                    <td>Palmela / Lisboa</td>
+                                    <td>932382014</td>
+                                </tr>
+
+                                <tr>
+                                    <td>Sérgio Costa</td>
+                                    <td>Zona Sul</td>
+                                    <td>932281810</td>
+                                </tr>
+
+                                <tr>
+                                    <td>Rui Silva</td>
+                                    <td>Coordenador</td>
+                                    <td>939471346</td>
+                                </tr>
+
+                                <tr>
+                                    <td>Rosa Pasadas</td>
+                                    <td>O&M Manager</td>
+                                    <td>933674528</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                    <!-- end of field contacts table -->
                 </div>
             </div>
         </div>
