--- a/index.htm
+++ b/index.htm
@@ -8,9 +8,9 @@
     <title>NOC HELPER</title>
 
     <!-- Link to bootstrap css folder -->
-    <link rel="stylesheet" href="./css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://andrenicolau.github.io/NOC-Helper/css/bootstrap.min.css">
     <!-- Link to bootstrap js folder -->
-    <script src="./js/bootstrap.bundle.min.js"></script>
+    <script src="https://andrenicolau.github.io/NOC-Helper/js/bootstrap.min.js"></script>
 </head>
 
 <body class="bg-dark text-white">
