--- a/index.htm
+++ b/index.htm
@@ -355,8 +355,8 @@
         </div>
     </div>
 
-    <script src="/js/app.js"></script>
-    <script src="/js/sosTelegram.js"></script>
+    <script src="https://andrenicolau.github.io/NOC-Helper/js/app.js"></script>
+    <script src="https://andrenicolau.github.io/NOC-Helper/js/sosTelegram.js"></script>
 </body>
 
 </html>
