--- a/index.htm
+++ b/index.htm
@@ -356,6 +356,9 @@
         </div>
     </div>
 
+    <script src="./js/bootstrap.bundle.min.js"></script>
+    <script src="./js/bootstrap.bundle.min.js"></script>
+
     <script src="https://andrenicolau.github.io/NOC-Helper/js/app.js"></script>
     <script src="https://andrenicolau.github.io/NOC-Helper/js/sosTelegram.js"></script>
     
