--- a/index.htm
+++ b/index.htm
@@ -9,9 +9,9 @@
 
     
     <!-- Link to bootstrap css folder -->
-    <link rel="stylesheet" href="https://andrenicolau.github.io/NOC-Helper/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://andrenicolau.github.io/NOC-Helper/css/bootstrap.bundle.min.css">
     <!-- Link to bootstrap js folder -->
-    <script src="https://andrenicolau.github.io/NOC-Helper/js/bootstrap.min.js"></script>
+    <script src="https://andrenicolau.github.io/NOC-Helper/js/bootstrap.bundle.min.js"></script>
 </head>
 
 <body class="bg-dark text-white">
