--- a/index.htm
+++ b/index.htm
@@ -7,11 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NOC HELPER</title>
 
-    
+
     <!-- Link to bootstrap css folder -->
-    <link rel="stylesheet" href="https://andrenicolau.github.io/NOC-Helper/css/bootstrap.bundle.css">
+    <link rel="stylesheet" href="https://andrenicolau.github.io/NOC-Helper/css/bootstrap.bundle.min.css">
     <!-- Link to bootstrap js folder -->
-    <script src="https://andrenicolau.github.io/NOC-Helper/js/bootstrap.bundle.js"></script>
+    <script src="https://andrenicolau.github.io/NOC-Helper/js/bootstrap.bundle.min.js"></script>
 </head>
 
 <body class="bg-dark text-white">
@@ -359,8 +359,11 @@
     <script src="./js/bootstrap.bundle.min.js"></script>
     <script src="./js/bootstrap.bundle.min.js"></script>
 
-    <script src="https://andrenicolau.github.io/NOC-Helper/js/app.js"></script>
-    <script src="https://andrenicolau.github.io/NOC-Helper/js/sosTelegram.js"></script>
-    
+    <!--
+        <script src="https://andrenicolau.github.io/NOC-Helper/js/app.js"></script>
+        <script src="https://andrenicolau.github.io/NOC-Helper/js/sosTelegram.js"></script>
+    -->
+
 </body>
+
 </html>
