--- a/index.htm
+++ b/index.htm
@@ -356,8 +356,8 @@
         </div>
     </div>
 
-    <script src="./js/bootstrap.bundle.min.js"></script>
-    <script src="./js/bootstrap.bundle.min.js"></script>
+    <script src="./js/app.js"></script>
+    <script src="./js/sosTelegram.js"></script>
 
     <!--
         <script src="https://andrenicolau.github.io/NOC-Helper/js/app.js"></script>
