--- a/index.htm
+++ b/index.htm
@@ -9,7 +9,7 @@
 
 
     <!-- Link to bootstrap css folder -->
-    <link rel="stylesheet" href="https://andrenicolau.github.io/NOC-Helper/css/bootstrap.bundle.min.css">
+    <link rel="stylesheet" href="https://andrenicolau.github.io/NOC-Helper/css/bootstrap.min.css">
     <!-- Link to bootstrap js folder -->
     <script src="https://andrenicolau.github.io/NOC-Helper/js/bootstrap.bundle.min.js"></script>
 </head>
