--- a/index.htm
+++ b/index.htm
@@ -232,11 +232,13 @@
         </div>
         <!-- end of sos telegram -->
 
-        <!-- CONTACTS -->
-        <div id="contacts" data-bs-parent="#accordion" class="collapse" style="margin-top: 80px;">
-            <div class="container">
+        <!-- 
+
+          CONTACTS 
+            <div id="contacts" data-bs-parent="#accordion" class="collapse" style="margin-top: 80px;">
+                <div class="container">
                 <div class="table-responsive">
-                    <!-- CONTACTS TABLE -->
+                     CONTACTS TABLE 
                     <table class="table table-bordered table-striped table-dark text-center align-middle">
                         <thead class="bg-secondary">
                             <th colspan="3" scope="col" class="bg-secondary">Escalamento Interno</th>
@@ -291,8 +293,9 @@
                             </tr>
                         </tbody>
                     </table>
-                    <!-- end of contacts table -->
-
+                    end of contacts table
+                -->
+                    
                     <!-- FIELD CONTACTS TABLE-->
                     <div class="table-responsive">
                         <table class="table table-bordered table-striped table-dark text-center align-middle">
@@ -305,7 +308,7 @@
                                     <td class="fw-bold">Zona</td>
                                     <td class="fw-bold">Telemóvel</td>
                                 </tr>
-
+                                
                                 <tr>
                                     <td>Hélder Rainho</td>
                                     <td>Caldas da Rainha</td>
