--- a/index.htm
+++ b/index.htm
@@ -234,14 +234,12 @@
 
         <!-- 
 
-          CONTACTS 
-            <div id="contacts" data-bs-parent="#accordion" class="collapse" style="margin-top: 80px;">
-                <div class="container">
+            <div class="container">
                 <div class="table-responsive">
-                     CONTACTS TABLE 
-                    <table class="table table-bordered table-striped table-dark text-center align-middle">
-                        <thead class="bg-secondary">
-                            <th colspan="3" scope="col" class="bg-secondary">Escalamento Interno</th>
+                  CONTACTS TABLE 
+                  <table class="table table-bordered table-striped table-dark text-center align-middle">
+                      <thead class="bg-secondary">
+                          <th colspan="3" scope="col" class="bg-secondary">Escalamento Interno</th>
                         </thead>
                         <tbody>
                             <tr>
@@ -295,12 +293,14 @@
                     </table>
                     end of contacts table
                 -->
-                    
-                    <!-- FIELD CONTACTS TABLE-->
-                    <div class="table-responsive">
-                        <table class="table table-bordered table-striped table-dark text-center align-middle">
-                            <thead class="bg-secondary">
-                                <th colspan="3" scope="col" class="bg-secondary">FIELD</th>
+                
+                <!-- CONTACTS -->
+                <div id="contacts" data-bs-parent="#accordion" class="collapse" style="margin-top: 80px;">
+                <!-- FIELD CONTACTS TABLE-->
+                <div class="table-responsive">
+                    <table class="table table-bordered table-striped table-dark text-center align-middle">
+                        <thead class="bg-secondary">
+                            <th colspan="3" scope="col" class="bg-secondary">FIELD</th>
                             </thead>
                             <tbody>
                                 <tr>
