--- a/index.htm
+++ b/index.htm
@@ -295,7 +295,7 @@
                 -->
                 
                 <!-- CONTACTS -->
-                <div id="contacts" data-bs-parent="#accordion" class="collapse" style="margin-top: 80px;">
+                <div id="contacts" data-bs-parent="#accordion" class="container collapse" style="margin-top: 80px;">
                 <!-- FIELD CONTACTS TABLE-->
                 <div class="table-responsive">
                     <table class="table table-bordered table-striped table-dark text-center align-middle">
