--- a/index.htm
+++ b/index.htm
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NOC HELPER</title>
 
+    <link rel="icon" href="/img/favicon.ico">
 
     <!-- Link to bootstrap css folder -->
     <link rel="stylesheet" href="https://andrenicolau.github.io/NOC-Helper/css/bootstrap.min.css">
