--- a/index.htm
+++ b/index.htm
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NOC HELPER</title>
 
+    <link rel="icon" href="https://github.com/AndreNicolau/NOC-Helper/blob/main/img/favicon.ico">
     <link rel="icon" href="/img/favicon.ico">
 
     <!-- Link to bootstrap css folder -->
