--- a/index.htm
+++ b/index.htm
@@ -233,72 +233,10 @@
             </div>
         </div>
         <!-- end of sos telegram -->
-
-        <!-- 
-
-            <div class="container">
-                <div class="table-responsive">
-                  CONTACTS TABLE 
-                  <table class="table table-bordered table-striped table-dark text-center align-middle">
-                      <thead class="bg-secondary">
-                          <th colspan="3" scope="col" class="bg-secondary">Escalamento Interno</th>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td class="fw-bold">Empresa</td>
-                                <td class="fw-bold">Nome / Zona</td>
-                                <td class="fw-bold">Contacto</td>
-                            </tr>
-                            <tr>
-                                <td rowspan="8" class="fw-bold">Zener</td>
-                                <td>Palmela / Lisboa</td>
-                                <td>Provisório Vítor Santos - 928098494</td>
-                            </tr>
-                            <tr>
-                                <td>Caldas da Rainha</td>
-                                <td>928025416</td>
-                            </tr>
-                            <tr>
-                                <td>Algarve</td>
-                                <td>928034863</td>
-                            </tr>
-                            <tr>
-                                <td>Elvas / Portalegre</td>
-                                <td>928034506</td>
-                            </tr>
-                            <tr>
-                                <td>Évora / Beja</td>
-                                <td>Provisório Paulo Matos - 928070260</td>
-                            </tr>
-                            <tr>
-                                <td>Alcácer / St André</td>
-                                <td>Provisório Paulo Matos - 928070260</td>
-                            </tr>
-                            <tr>
-                                <td>2ª Linha</td>
-                                <td>Filipe Pinto 928077787</td>
-                            </tr>
-                            <tr>
-                                <td>3ª Linha</td>
-                                <td>928034894</td>
-                            </tr>
-                            <tr>
-                                <td rowspan="2" class="bg-warning text-dark fw-bold">CME</td>
-                                <td>1ª Linha</td>
-                                <td>Pedro Noverça - 931048171</td>
-                            </tr>
-                            <tr>
-                                <td>2ª Linha</td>
-                                <td>931048314</td>
-                            </tr>
-                        </tbody>
-                    </table>
-                    end of contacts table
-                -->
                 
-                <!-- CONTACTS -->
+                <!--  CONTACTS
                 <div id="contacts" data-bs-parent="#accordion" class="container collapse" style="margin-top: 80px;">
-                <!-- FIELD CONTACTS TABLE-->
+                FIELD CONTACTS TABLE
                 <div class="table-responsive">
                     <table class="table table-bordered table-striped table-dark text-center align-middle">
                         <thead class="bg-secondary">
@@ -355,7 +293,7 @@
                             </tbody>
                         </table>
                     </div>
-                    <!-- end of field contacts table -->
+                    end of field contacts table -->
                 </div>
             </div>
         </div>
