--- a/index.htm
+++ b/index.htm
@@ -35,9 +35,9 @@
                     <li class="nav-item">
                         <a href="#sosTelegram" data-bs-toggle="collapse" class="nav-link text-white">SOS TELEGRAM</a>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a href="#contacts" data-bs-toggle="collapse" class="nav-link text-white">CONTACTOS</a>
-                    </li>
+                    </li> -->
                 </ul>
             </div>
         </div>
