--- a/index.htm
+++ b/index.htm
@@ -74,7 +74,7 @@
 
                         <ul class="dropdown-menu" aria-labelledby="buttonAlarmesGroup">
                             <li><a href="#" class="ALARMES dropdown-item"> Afetação dispersa. </a></li>
-                            <li><a href="#" class="ALARMES dropdown-item"> Em análise. </a></li>
+                            <li><a href="#" class="ALARMES dropdown-item"> Em monitorização. </a></li>
                             <li><a href="#" class="ALARMES dropdown-item"> SNR dentro dos parâmetros. </a></li>
                             <li><a href="#" class="ALARMES dropdown-item"> Apenas esta frequência está a 0, as restantes estão dentro dos parâmetros. </a></li>
 
