--- a/index.htm
+++ b/index.htm
@@ -77,6 +77,7 @@
                             <li><a href="#" class="ALARMES dropdown-item"> Em monitorização. </a></li>
                             <li><a href="#" class="ALARMES dropdown-item"> SNR dentro dos parâmetros. </a></li>
                             <li><a href="#" class="ALARMES dropdown-item"> Apenas esta frequência está a 0. </a></li>
+                            <li><a href="#" class="ALARMES dropdown-item"> Frequências D1 sem equipamentos ligados. </a></li>
 
                         </ul>
                     </div>
