--- a/index.htm
+++ b/index.htm
@@ -62,7 +62,7 @@
                 </form>
 
                 <textarea id="txtDescrição" cols="30" rows="10"
-                    class="mb-2 rounded border border-primary border-2 w-75 align-self-center">Técnico *nome* (*contacto*) contacta e informa que </textarea>
+                    class="mb-2 rounded border border-primary border-2 w-75 align-self-center">Técnico *nome* (*contacto*) contacta, informa que </textarea>
 
                 <button id="btnCopiar" class="btn fw-bold btn-primary mb-3 w-75 align-self-center">Copiar</button>
 
